# LogSystemMB

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXAMPLES.md  LogSystem.cpp  LogSystem.h  LogSystemMB.filters  LogSystemMB.sln  LogSystemMB.vcxproj  README.md  benchmark.cpp  main.cpp
.github/workflows/: build.yml
Config/: logconfig.ini
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  INSTALLATION.md  TROUBLESHOOTING.md
scripts/: build.bat  release.bat
